--- a/backend/templates/Work-constraints.html
+++ b/backend/templates/Work-constraints.html
@@ -4,91 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Work Constraints</title>
-  <!--To Do: relate styles.css file-->
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-  <style>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/work-constraints.css') }}">
 
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    main {
-      min-height: 100vh;
-      height: 90%;
-      position: relative;
-      overflow: hidden;
-    }
-
-    header {
-      height: 10%;
-      position: relative;
-      z-index: 2; 
-    }
-
-    h2{
-      direction: rtl;
-      margin-top: 5%;
-      margin-right:5%
-    }
-
-    form{
-      direction: rtl;
-    }
-    #submitBtn, .delBtn{
-      background-color: #E50058;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-right: 45%;
-      display: block;
-    }
-
-    #times{
-      height: 200px;
-      width: 100px;
-    }
-
-    .dates{
-      margin-right: 40%;
-      position: absolute;
-      margin-top: 5%;
-    }
-
-    .times{
-      margin-right: 50%;
-    }
-
-    li{
-      margin:2%;
-      background-color: white;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      margin-bottom: 10px;
-      text-align: right;
-      list-style-type: none
-    }
-
-    #background-rectangle {
-      background-color: #FBB8A1;
-      position: relative;
-      left: 2%;
-      width: 96%;
-      height: 99%;
-      border-radius: 30px; 
-      padding-bottom: 1%;
-    }
-
-    ul{
-      padding-inline-end: 40px;
-    }
-
-  </style>
 </head>
 <body>
   <header>
@@ -96,6 +13,7 @@
     <div id="navbar-container"></div>
   </header>
   <main>
+    <button class="btn" id="employeeAppointments" onclick="employeeAppointments()">התורים שלי</button>
     <h2>הוסיפי אילוצים עבור חודש העבודה הבא</h2>
     <form action="/add-work-constraints" method="post">
       <label class="dates" for="dates">בחירת תאריך:</label><br>
@@ -104,7 +22,7 @@
       <select class="times" id="times" name="times[]" multiple required>
         <!-- Time options will be generated dynamically using JavaScript -->
       </select><br><br>
-      <input id="submitBtn" type="submit" value="שליחה">
+      <input class="btn" id="submitBtn" type="submit" value="שליחה">
     </form>
     <div id="background-rectangle"> 
       <h2>האילוצים שלי</h2>
@@ -127,6 +45,12 @@
           function navigateTo(page) {
           window.location.href = page;
         }
+
+        function employeeAppointments() {
+      // navigate to make-appointment page
+      navigateTo('/employee-appointments')
+    }
+
 
      // Get the current date
     var today = new Date();
