--- a/backend/templates/create-apprenticeship.html
+++ b/backend/templates/create-apprenticeship.html
@@ -5,80 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sophie's Cosmetics</title>
-  <style>
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      overflow: hidden; /* Prevent body overflow */
-    }
-
-    #main-content {
-      min-height: 100vh;
-      position: relative;
-      overflow: hidden; /* Hide any overflow outside main-content */
-    }
-
-    #background-rectangle {
-      background-color: #FBB8A1;
-      position: absolute;
-      top: 3%;
-      left: 2%;
-      bottom: 5%;
-      width: 96%;
-      height: 80%;
-      z-index: -1;
-      border-radius: 30px; /* Adjust the radius as needed */
-    }
-
-    header {
-        height: 10%;
-      position: relative;
-      z-index: 2; /* Ensure header is above background-rectangle */
-    }
-
-    main{
-        height: 90%;
-    }
-    #form-container {
-      width: 100%;
-      max-width: 750px;
-      padding: 20px;
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      direction: rtl;
-    }
-
-    .apprenticeship-container {
-      margin-bottom: 20px;
-    }
-
-
-    #submit-newApprenticeship {
-      background-color: #E50058;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      position: fixed;
-    }
-
-    #title{
-      width: 100%;
-    }
-
-    #description{
-      width: 100%;
-    }
-
-    #duration, #amount_of_meetings{
-      width: 10%;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/create-apprenticeship.css') }}">
 </head>
 <body>
     <header>
