--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -4,90 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>עובדת Dashboard</title>
-    <style>
-        body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        }
-
-        main {
-        min-height: 100vh;
-        height: 90%;
-        position: relative;
-        overflow: hidden; /* Hide any overflow outside main-content */
-        }
-
-        header {
-        height: 10%;
-        position: relative;
-        z-index: 2; /* Ensure header is above background-rectangle */
-        }
-
-        .buttons-container {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: 2;
-        }
-
-        #dashboard {
-            max-width: 600px;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px white; 
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            width: 100%;
-            position: relative;
-            z-index: 1;
-            background-color: white;
-        }
-
-        #dashboard-content {
-            text-align: right;
-            flex-grow: 1;
-            width: 100%;
-            z-index: 1;
-        }
-
-        #edit-form-container {
-            position: relative;
-            width: 100%;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-        }
-
-        #edit-form {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-        }
-
-        #edit-form input {
-            margin-bottom: 10px;
-            padding: 5px;
-        }
-
-        #change-details-button {
-            background-color: #ba2255;
-            color: #fff;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-    </style>
+    <title>Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dashboard.css') }}">
 </head>
 
 <body>
