--- a/backend/templates/forum.html
+++ b/backend/templates/forum.html
@@ -5,77 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sophie's Cosmetics</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <style>
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/forum.css') }}">
 
-    #main-content {
-      min-height: 100vh;
-      position: relative;
-      overflow: hidden; /* Hide any overflow outside main-content */
-    }
-
-    #background-rectangle {
-      background-color: #FBB8A1;
-      position: absolute;
-      top: 0.5%;
-      left: 2%;
-      bottom: 5%;
-      width: 96%;
-      height: 99%;
-      z-index: -1;
-      border-radius: 30px; 
-    }
-
-    header {
-        height: 10%;
-      position: relative;
-      z-index: 2; /* Ensure header is above background-rectangle */
-    }
-
-    main{
-        height: 90%;
-    }
-    #form-container {
-      border-radius: 10px;
-      margin: 7%;
-      margin-top: 10%;
-      position: relative;
-      z-index: 2; /* Ensure form-container is above background-rectangle */
-    }
-
-    .subjects-container {
-      margin-bottom: 20px;
-    }
-
-    .question {
-      background-color: white;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      margin-bottom: 10px;
-      direction: rtl;
-    }
-
-    #create-subject-btn, #delBtn {
-      background-color: #E50058;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: -5%;
-      margin-bottom: 1%;
-    }
-    p,h3{
-      direction: rtl;
-    }
-
-  </style>
 </head>
 <body>
     <header>
@@ -85,21 +16,25 @@
   <div id="main-content">
     <div id="background-rectangle"></div>
     <div id="form-container">
-        <button id="create-subject-btn" onclick="createSubject()">נושא חדש</button>
+        <button class="btn" id="create-subject-btn" onclick="createSubject()">נושא חדש</button>
+        {% if account_id == 1 %}
+        <button class="btn" id="approve-subjects-btn" onclick="approveSubjects()">נושאים ממתינים לאישור</button>
+        {% endif %}
         <div id="question-container" class="question-container"> 
           {% for subject in subjects %}
             <div class="question">
+                <h5>{{ subject.account_name }}</h5>
                 <h3>{{ subject.title }}</h3>
                 <p>{{ subject.content }}</p>
-                {% if account_id == subject.account_id %}
-                  <button id="delBtn" onclick="deleteSubject({{ subject.subject_id }})">מחק נושא</button>
+                {% if account_id == subject.account_id or account_id == 1 %}
+                  <button class="btn" id="delBtn" onclick="deleteSubject({{ subject.subject_id }})">מחק נושא</button>
                 {% endif %}
                 <i class="fa fa-comments" onclick="toggleComments({{ subject.subject_id }})"></i>
                 <span id="comment-count-{{ subject.subject_id }}" class="comment-count">{{subject.comment_count}} תגובות</span>
                 <div id="comments-{{ subject.subject_id }}" style="display: none;"></div>
                 <form id="comment-form-{{ subject.subject_id }}" style="display: none;">
                     <input type="text" id="comment-input-{{ subject.subject_id }}" placeholder="Add a comment">
-                    <button type="button" onclick="submitComment({{ subject.subject_id }})">Submit</button>
+                    <button class="btn" type="button" onclick="submitComment({{ subject.subject_id }})">שליחה</button>
                 </form>
             </div>
           {% endfor %}
@@ -127,6 +62,11 @@
     function createSubject() {
       // navigate to create subject page
       navigateTo('/create-subject')
+    }
+
+    function approveSubjects() {
+      // navigate to create subject page
+      navigateTo('/manager-forum')
     }
 
     document.addEventListener('DOMContentLoaded', function(){
@@ -289,7 +229,7 @@ function fetchComments(subjectId) {
 
 function deleteSubject(subjectId) {
     // Confirm with the user before deleting the subject
-    if (confirm("Are you sure you want to delete this subject?")) {
+    if (confirm("האם למחוק את הנושא?")) {
         // Send an asynchronous POST request to the server to delete the subject
         fetch("/delete-subject", {
             method: "POST",
